# brain-assistant

./: CHANGELOG.md  Cargo.toml  Changelog.md  README.md
.github/workflows/: check_changelog.yaml  ci.yaml  create_release.yaml  test.yaml
data/: rules.txt
scripts/: bump_version.py  get_target.py  init.sh
src/: expr.rs  main.rs  number.rs  parser.rs  reduce.rs  text_composer.rs
src/parse/: cmp.rs  expr.rs  mod.rs  template.rs
