[package]
name = "brain-assistant"
version = "0.1.0"
edition = "2021"
description = "Mathematics tool and encyclopedia for the terminal"
readme = "README.md"
homepage = "https://github.com/spelbryggeriet/brain-assistant"
repository = "https://github.com/spelbryggeriet/brain-assistant"
license = "Apache-2.0"
keywords = ["math", "cli"]
categories = ["mathematics", "command-line-utilities"]

[[bin]]
path = "src/main.rs"
name = "brain"

[dependencies]
anyhow = "1.0.71"
colored = "2.0.0"
lazy-regex = "2.5.0"
nom = "7.1.3"
num-bigint = "0.4.3"
num-traits = "0.2.15"
once_cell = "1.17.1"
uuid = { version = "1.3.3", features = ["v4"] }
